--- a/package.json
+++ b/package.json
@@ -64,5 +64,8 @@
     "@open-tech-world/es-cli-styles": "^0.2.0",
     "@open-tech-world/es-glob": "^0.7.0",
     "@open-tech-world/node-glob": "^0.3.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
